   MLWDicer의 Initialize에서 create class 할 때에 CMAxisZoneCheck 초기화해서 set해주는 부분 추가
2. class 필수부분, cylinder&vacuum 부분들 #region / #endregion으로 묶어줌
3. MeSpinner, MCtrlSpinner 1차 수정 완료.

// Version : 0.0.22
// Grade : ★
// Date : 160608
// Context
1. CPositionData 관련하여 LoadPositionData, SavePositionData 함수 정리 및 LWDicer에서 set position 하는 부분 정리.
   MeStage class 에 Camera, Laser Position 추가

////////////////////////////////////////////////////////////////////////////////////////////
// LJJ
// Version : 0.0.1
// Grade : ★★
// Date : 2016-03-02
// Context
1. Vision Connect
2. Baumer Dll Copy
3. Simulation Vision Mode 설정

// Version : 0.0.2
// Grade : ★★
// Date : 2016-04-04
// Context
1. Hardware Layer에서 System,Camera,Display 객체 생성
2. MVision의 System,Camera,Display를 RefComp로 연결
3. GenerateErrorCode 생성기능을 적용함. 

// Version : 0.0.3
// Grade : ★
// Date : 2016-04-14 ~2016-04-19
// Context
1. MMeElevator : 초기 Class 제작
2. 이동 및 확인에 검색에 대한 기능 구현

// Version : 0.0.4
// Grade : ★
// Date : 2016-04-19 ~2016-04-20
// Context
1. MMeStage : 초기 Class 제작
2. 이동 및 확인에 검색에 대한 기능 구현
3. Git Update 확인.

// Version : 0.0.5
// Grade : ★
// Date : 2016-04-25 ~2016-04-26
// Context
1. MCtrlLoader : 초기 Class 제작
2. Mechanical Layer에서 상속, 필요 함수 구현

// Version : 0.0.6
// Grade : ★
// Date : 2016-04-26 ~2016-04-29 (27일 ACS 테스트)
//		  2016-05-02 ~2016-05-03
// Context

1. MCtrlStage : 초기 Class 제작
   Mechanical Layer의 MMeStage에서 Align 동영상을 보면서 기능을 추가적으로 삽입 필요
                      MMeVision의 기본 기능 구성
					  MMeElevator 에러 명 변경
2. MMeElevator & MMeStage의 함수 일부 수정(정리)
3. MPosition의 생성자에서 변수 초기화 
4. MCtrlStage의 Vision에서 
	- Calibration 및 연산에 관련 기본 함수들 작성 진행
	- ThetaAlign 동작 및 연산부
	- EdgeAlign Position 위치값 설정 동작 (Next button 기능)
	- 카메라 위치 파악 연산 Calibration

// Version : 0.0.7
// Grade : ★
// Date : 2016-05-09 ~2016-05-11
// Context

1. MCtrlStage의 Vision에서 
	- 카메라 위치 파악 연산 Calibration (Micro)
	- 카메라 위치 설정 (Macro)
	- Edge Align 동작 
	- Macro Align 동작 
	- Micro lign 동작 